feat: repeatable tech summary

--- a/mod/localisation/!techrel_l_braz_por.yml
+++ b/mod/localisation/!techrel_l_braz_por.yml
@@ -1,4 +1,5 @@
 ﻿l_braz_por:
+  techrel_repeatable: "Repetível"
   techrel_requires: "£research£ §HRequer as seguintes tecnologias§!"
   techrel_unlocks: "£research£ §HDesbloqueia as seguintes tecnologias§!"
   techrel_one_of: "§HDeve ter um de§!"
