--- a/mod/localisation/!techrel_l_french.yml
+++ b/mod/localisation/!techrel_l_french.yml
@@ -1,4 +1,5 @@
 ﻿l_french:
+  techrel_repeatable: "Répétable"
   techrel_requires: "£research£ §HNécessite les technologies suivantes§!"
   techrel_unlocks: "£research£ §HDébloque les technologies suivantes§!"
   techrel_one_of: "§HDoit en avoir un§!"
