--- a/mod/localisation/!techrel_l_korean.yml
+++ b/mod/localisation/!techrel_l_korean.yml
@@ -1,4 +1,5 @@
 ﻿l_korean:
+  techrel_repeatable: "반복 가능"
   techrel_requires: "£research£ §H다음 기술이 필요합니다§!"
   techrel_unlocks: "£research£ §H다음 기술을 잠금 해제하세요§!"
   techrel_one_of: "§H다음 중 하나가 있어야 합니다§!"
