--- a/mod/localisation/!techrel_l_simp_chinese.yml
+++ b/mod/localisation/!techrel_l_simp_chinese.yml
@@ -1,4 +1,5 @@
 ﻿l_simp_chinese:
+  techrel_repeatable: "循环"
   techrel_requires: "£research£ §H需要下列科技§!"
   techrel_unlocks: "£research£ §H解锁下列科技§!"
   techrel_one_of: "§H需要以下之一§!"
